[ADD] Se aplicado este commit vai Instalar dependencia Oauth Passport;

--- a/.env
+++ b/.env
@@ -1,15 +1,16 @@
-APP_NAME="Lience Admin"
-APP_ENV=local
+APP_NAME="Lience Software"
+APP_ENV=development
 APP_KEY=base64:Hbn6ojwmKA+F9cAtYkuOn9oo1d8iLHqlfQTlUul1tCU=
 APP_DEBUG=true
-APP_URL=http://lience-admin.local/
+APP_URL=http://venus.lience.local/
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=bibi
+DB_DATABASE=lience
+DB_SCHEMA=venus
 DB_USERNAME=userLience
 DB_PASSWORD=@6*HbJgyii8B
 
