[UPD] Se aplicado este commit vai Mudar configurações de conexão de banco;

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME="Lience Software"
+APP_NAME="Lience Zeus"
 APP_ENV=development
 APP_KEY=base64:Hbn6ojwmKA+F9cAtYkuOn9oo1d8iLHqlfQTlUul1tCU=
 APP_DEBUG=true
-APP_URL=http://venus.lience.local/
+APP_URL=http://zeus.lience.local/
 
 LOG_CHANNEL=stack
 
@@ -10,9 +10,9 @@ DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_DATABASE=lience
-DB_SCHEMA=venus
+DB_SCHEMA=zeus
 DB_USERNAME=userLience
-DB_PASSWORD=@6*HbJgyii8B
+DB_PASSWORD=Euamodeu5
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
