--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,7 @@
 {
-    "name": "botman/studio",
-    "description": "BotMan Chatbot framework.",
+    "name": "lience/zeus-back-end",
+    "description": "Zeus: Deus grego que possui autoridade sobre demais Deuses.",
     "keywords": [
-        "botman",
-        "chatbot",
         "framework",
         "laravel"
     ],
@@ -11,10 +9,6 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
-        "botman/botman": "~2.0",
-        "botman/driver-web": "~1.0",
-        "botman/studio-addons": "~1.3",
-        "botman/tinker": "~1.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/passport": "^7.3",
@@ -57,12 +51,10 @@
             "php artisan key:generate"
         ],
         "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "BotMan\\Studio\\Providers\\DriverServiceProvider::publishDriverConfigurations"
+            "Illuminate\\Foundation\\ComposerScripts::postInstall"
         ],
         "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "BotMan\\Studio\\Providers\\DriverServiceProvider::publishDriverConfigurations"
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
