[UPD] Se aplicado esse commit vai Corrigir arquivo composer.json

--- a/composer.json
+++ b/composer.json
@@ -73,5 +73,5 @@
         "optimize-autoloader": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
+    "prefer-stable": true
 }
