--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "liencesoft/skeleton-laravel",
+    "name": "maurelyo/skeleton-laravel",
     "description": "Projeto base arquitetura API modular",
     "keywords": [
         "framework",
@@ -9,11 +9,12 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-cors": "^0.11.4",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.0",
         "laravel/passport": "^7.3",
         "laravel/tinker": "^1.0",
-        "spatie/laravel-permission": "^2.37",
+        "spatie/laravel-permission": "^3.0",
         "webpatser/laravel-uuid": "^3.0"
     },
     "require-dev": {
@@ -27,7 +28,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/liencesoft/skeleton-laravel"
+            "url": "https://github.com/maurelyo/skeleton-laravel"
         }
     ],
     "autoload": {
