--- a/.env
+++ b/.env
@@ -9,10 +9,10 @@ LOG_CHANNEL=stack
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=postgres
+DB_DATABASE=eventop
 DB_SCHEMA=public
 DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_PASSWORD=jpresende
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
